--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -17,29 +17,21 @@ This chapter will detail the individual stages of the global illumination pipeli
 The reflective shadow map and the subsequent VPL sampling (left part of middle row in the diagram) will be covered in the following section.
 Section~\ref{sec:concept:ism} describes the rendering process for the imperfect shadow maps (lower row) in detail.
 The final gathering step uses data from the clustered shading technique (upper row, detailed in Section~\ref{sec:concept:clusteredShading}) and performs interleaved sampling (right part of middle row, detailed in Section~\ref{sec:concept:interleavedSampling}).
-Finally, during final gathering, we use clamping to remove singularities, this is shortly presented in Section~\ref{sec:concept:clamping}.
-Our G-buffer rendering does not differ from common deferred rendering pipelines and is not covered further.
+
+During final gathering, clamping is used to remove singularities. Since this is a fairly trivial solution, this is not covered further.
+In addition, our G-buffer rendering does not differ from common deferred rendering pipelines and is not covered further as well.
 
 
 \section{Virtual Point Light Sampling with Reflective Shadow Maps}
 \label{sec:concept:rsmVplSampling}
 
-VPL sampling has not been the focus of this thesis, therefore we use a rather basic approach by rendering a simple reflective shadow map and regularly sampling it. \citet{hedman2016sequential} present a more advanced approach.
+Reflective shadow maps are often preferred due to their simplicity and efficiency. Both advantages come from the fact that they are generated similar to conventional shadow maps, making them easy to implement and a perfect fit for GPUs. A downside is that they are well-suited only for computing the first light bounce.
 
-\begin{outline}
-\1 Often preferred due to the simplicity and speed because rasterization. but, first bounce only.
+Just like conventional shadow maps, RSMs render the scene form the viewpoint of a light. Besides the depth buffer used for shadow mapping, they render additional surface information, namely normal and color. This is similar to the additional G-buffers used by deferred rendering.
 
-\1 Similar to regular G-Buffer rendering
+The result can be sampled to create VPLs with a certain position reconstructed from the depth buffer, and normal and color taken from the additional buffers.
 
-\1 Like shadow maps, scene is rendered from the light's viewpoint
-
-\1 Unlike shadow maps, not only depth is rendered but additionally normal and (diffuse) surface color.
-
-\1 The result can be sampled to create VPLs with a certain position reconstructed from the depth buffer, and normal and color taken from the additional buffers.
-
-\1 In our case, we use regular sampling. Importance-based approaches are available, also the samples can be clustered \cite{} or chosen relative to their estimated contribution to the final output. \citet{hedman2016sequential} uses a different approach without RSMs.
-
-\end{outline}
+VPL sampling has not been the focus of this thesis, therefore we use a rather basic approach by creating an RSM and regularly sampling it. More advanced approaches are available (see \Cref{sec:intro:relatedWorkManyLight:vplSampling}), some of which do not use RSMs (e.\,g.\ \cite{hedman2016sequential})
 
 
 \section{Visibility Computation with Imperfect Shadow Maps}
@@ -53,7 +45,7 @@ We follow this approach since it is relatively straightforward to implement and 
 
 In contrast to \citet{ritschel2008ism}, we have found the pull-push postprocessing to be of little benefit when using regular point splatting. Instead, we propose to render the points as single pixels, which opens interesting optimization opportunities, but in turn requires the pull-push algorithm to reconstruct the scene surfaces.
 
-We describe the regular point splat rendering process in the following section and subsequently detail the pull-push algorithm that we use when rendering single-pixel points.
+The following subsections describe the regular point splat rendering process and subsequently detail the pull-push algorithm that is used when rendering single-pixel points.
 
 
 \subsection{Point Rendering with Splatting}
@@ -100,45 +92,31 @@ Since the input and output pixel's location do not match the way they do during 
 In real-time graphics applications, primarily video games, a technique called \textit{clustered shading} \citep{olsson2012clustered}, has seen increased usage. Its goal is to increase the efficiency of lighting a scene with multiple light sources.
 The effectiveness of clustered shading in the context of many-light global illumination has not been studied so far to our knowledge, and we aim to contribute a few datapoints to this end.
 
-The integrated algorithm works as follows:
-\begin{outline}
-\1 view frustum is divided into a fixed number of clusters
-\1 for each fragment, determine cluster. clusters with no fragments are ignored.
-\1 for each cluster, determine the VPLs that can reach that cluster, put into light list.
-\1 during shading, don't iterate over all VPLs but only those from the light list.
-\1 usually, large benefits due to limited radius. we have infinite radius, but at least we can discard half the lights because hemisphere.
-\1 As an extension, \citet{olsson2012clustered} propose to calculate explicit bounds for the cluster's fragments to enable more precise culling. we expected only moderate performance gains from that and have not implemented it.
-\1 Another extension is to use the surface normal's direction as fourth dimension after the three spatial dimensions for clustering, allowing for some sort of backface culling for even greater efficiency. While this seems more promising in terms of performance gains, we have not implemented it either (wir sind bisher nicht dazu gekommen).
-\end{outline}
+The clustered shading technique works as follows:
 
-Clustered shading is an extension and improvement to \textit{tiled shading} \citep{Olsson:2011:TiledShading}, that uses screen-space tiles instead of view-space clusters. Tiled shading has previously combined with many-lights global illumination by \citet{Tokuyoshi:2016:Stochastic}. They use an order of magnitude more lights than we do, but stochastically limit them in range. As a result, the light culling is much more effective in their case.
-We implement tiled shading as well and compare it to clustered shading.
+First, the view frustum is divided into a fixed number of three-dimensional clusters. For each fragment, the respective cluster is determined with the purpose to ignore all clusters with no fragments in them. Then, for each cluster, all lights (in this case, VPLs) whose illuminated hemisphere the cluster intersects are added into a light list for that cluster. All other lights are ``culled'', i.\,e.\ ignored.
+
+When shading a fragment, the algorithm first determines the fragment's cluster again, and then iterates only over the lights in that cluster's light list. This way, many lights that have been discarded in the previous step don't need to be considered per fragment.
+
+This technique yields the most gains when using lights with a limited radius. In that case, the culling is all the more effective since all clusters that are farther away than the light's radius can be culled as well. Many-light methods often use infinite radii to enable light transport over long distances. However, one can still expect to cull roughly half of all lights with this technique in a many-light context.
+
+As an extension, \citet{olsson2012clustered} propose to calculate explicit bounds for the cluster's fragments to enable more precise culling. We expected only moderate performance gains from that and have not implemented it.
+
+Another extension is to use the surface normal's direction as fourth dimension after the three spatial dimensions for clustering, allowing for some sort of backface culling for even greater efficiency. While this seems more promising in terms of performance gains, we have not implemented it yet either.
+
+
+Clustered shading is an extension and improvement to \textit{tiled shading} \citep{Olsson:2011:TiledShading}, which uses screen-space tiles instead of view-space clusters. Tiled shading has previously combined with many-lights global illumination by \citet{Tokuyoshi:2016:Stochastic}. They use an order of magnitude more lights than we do, but stochastically limit them in range. As a result, the light culling is much more effective in their case.
+We implemented tiled shading as well and will compare it to clustered shading in \Cref{sec:results:clusteredShading}.
 
 
 \section{Interleaved Sampling}
 \label{sec:concept:interleavedSampling}
-Interleaved sampling \citep{Keller:2001:InterleavedSampling} is often used to vastly improve the performance impact of GI methods.
+Interleaved sampling \citep{Keller:2001:InterleavedSampling} is often used to tremendously improve the performance of GI methods with a negligible quality impact.
 
-\begin{outline}
-\1 general idea: given some amount of samples that, in a naïve implementation, would be performed per pixel, distribute those samples over a 4x4 or 8x8 block of pixel
-\1 the naïve implementation hurts cache coherency, since adjacent pixels process different samples.
-\1 to this end, de-interleaving \citep{segovia2006non} is often used to simultaneously process those pixels that use the same sample set. see Section~\ref{sec:impl:interleavedShading} for details.
+The general idea is as follows: given a set of samples that, when not using interleaved sampling, would be performed per pixel, distribute those samples over a block of pixels. Now, since each pixel has only a partition of the samples, there is obviously information missing per pixel. Visually, this becomes apparent in the form of structured noise. To this end, a geometry-awarl blur similar to \citet{laine2007incremental} is used to spread the information and thereby even out the noise. The blur is often implemented in a separated fashion, although it is, strictly speaking, not a separable one due to its geometry-awareness.
 
-\1 results in structured noise and missing information as all pixels have only part of the samples
-\1 therefore, geometry-aware blur similar to \citet{laine2007incremental} to distribute the information
-\1 the blur is separated (although since it is a bilateral filter, this is mathematically not equivalent, but difference is not noticeable), linear filter, and uses world-space distance and dot product between the samples as weight
+Since adjacent pixels now access disjoint sets of samples, naïve implementations of this technique usually show bad cache coherence. To improve on this, \citet{segovia2006non} proposed ``de-interleaving'' to group and process those pixel simultaneously that use the same sample set.
 
-\1 all this works because low-frequency effect
+Effectively, when applied to blocks of $n²$ pixels, this technique cuts down the cost of sampling to $ 1 / n² $ at the expense of smoothing high-frequency changes in the samples over $n$ pixels. Since global illumination is usually of low frequency, i.\,e.\ adjacent pixels usually receive a similar amount of indirect light, interleaved shading does not significantly affect quality when applied to global illumination. It falls short near depth and normal discontinuities, where the geometry-aware blur ignores several pixels. However, even in this case the quality degradation is hardly noticable as soon as the global illumination results are blended over the rendered image, see \Cref{sec:results:interleavedShading}.
 
-\1 In most aspects we follow this standard approach. The only notable deviation is our implementation of de-interleaving that does not use any separate splitting/merging passes, again we defer details to Section~\ref{sec:impl:interleavedShading}.
-
-\end{outline}
-
-
-
-\section{Removing Lighting Singularities through Clamping}
-\label{sec:concept:clamping}
-It's simple, we clamp the singularities. Wouldn't be necessary with infinite number of lights. \citet{hedman2016sequential} reach high accuracy even with clamping and 2k lights.
-
-
-\todo[color=blue]{textify concept}
+In most aspects we follow the standard approach for interleaved shading. The only notable deviation is the implementation of de-interleaving that does not use any separate splitting/merging passes, again we defer details to Section~\ref{sec:impl:interleavedShading}.
